--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <title>Dámské běžecké boty</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <div class="zbozi">
-
         <div class="vizual">
-
             <div class="logo">
                 <img src="images/nike.svg" alt="logo Nike" width="65" height="24">
             </div>
@@ -30,13 +29,9 @@
                 <div class="cena">2450&nbsp;Kč</div>
                 <div class="zaruka">Prodloužená záruka 3 roky</div>
             </div>
-
         </div><!-- konec .vizual -->
 
-
-
         <div class="detaily">
-
             <h1 class="nazev">Nike Air Zoom Pegasus 33</h1>
 
             <p class="produkt">Dámská běžecká bota</p>
@@ -59,9 +54,7 @@
             <div class="akce">
                 <a class="tlacitko" href="#">Do košíku</a>
             </div>
-
         </div><!-- konec .detaily -->
-
 
     </div><!-- konec .zbozi -->
 
